--- a/career.yaml
+++ b/career.yaml
@@ -1,5 +1,14 @@
 - when: "2019-04-01T00:00:00Z"
-  title: "Enter to NITIC"
+  title: "茨城高専に入学"
 
-- when: "2019-04-07T00:00:00Z"
-  title: "Transcendense"
+- when: "2020-04-01T00:00:00Z"
+  title: "情報系に進学"
+
+- when: "2020-03-02T00:00:00Z"
+  title: "限界開発鯖に参加"
+
+- when: "2020-12-01T00:00:00Z"
+  title: "パソコン甲子園 2020 モバイル部門 本戦出場"
+
+- when: "2021-09-18T00:00:00Z"
+  title: "技育展 2021 本戦出場"
